# my-jee-tutor-agent

./: .gitignore  README.md  TECHNICAL_DOCUMENT.md  pyproject.toml
docs/: agent-invocation-status-spec.md  aws-deploy-role-policy.json  block-diagram.md  cd-final-evaluator-evals-spec.md  crewai-controlled-react-orchestration-spec.md  crewai-hooks-spec.md  crewai-react-diagnosis-spec.md  crewai-task-guardrail-spec.md  curriculum-taxonomy-generation.md  deterministic-curriculum-validator-spec.md  final-evaluator-spec.md  quality-pipeline-implementation-plan.md  quality-pipeline-operations.md  repo-refactor-spec.md  send-email-hld.md  send-email-implementation-plan.md  send-email-lld.md  send-email-spec.md  structured-output-spec.md  student-longitudinal-analysis-whitepaper.md
evals/: jee_tutor_eval_cases.json
knowledge/: jee_curriculum_taxonomy.json
scripts/: build_curriculum_taxonomy.py  eval_runner.py  garak_agent_adapter.py  publish_curriculum_taxonomy.py  publish_garak_summary.py  run_agent_evals.py  run_agentcore_profile_smoke.py  run_agentcore_smoke.py  run_crewai_react_evals.py  run_final_evaluator_evals.py  run_live_final_evaluator_evals.py
security/: garak-rest.yml
src/: Dockerfile  agentcore_app.py  agentcore_handler.py  analysis_artifacts.py  analysis_pdf.py  image_inputs.py  invocation_models.py  main.py  tutor_invocation_service.py
terraform/: .terraform.lock.hcl  ecr.tf  email_delivery.tf  evidence_embeddings.tf  guardrails.tf  iam_agentcore.tf  invocation_status.tf  locals.tf  main.tf  outputs.tf  profile_reports_bucket.tf  providers.tf  runtime.tf  (+2 more)
(+209 files in other folders)
