[tool.poetry]
name = "my-jee-tutor-agent"
version = "0.1.0"
description = "AI-powered IIT JEE instructor built with Amazon Bedrock AgentCore, CrewAI, and liteLLM."
authors = ["OpenAI Codex <codex@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
boto3 = ">=1.42.86,<2.0.0"
bedrock-agentcore = "^1.6.2"
crewai = "0.150.0"
langfuse = "^3.0.0"
litellm = "1.74.3"
pypandoc = "^1.15"
pydantic = "2.11.4"

[tool.poetry.group.dev.dependencies]
coverage = {extras = ["toml"], version = "^7.6.0"}
ruff = "0.11.8"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
  "src/agents/tutor_agent/prompts.py",
]

[tool.coverage.report]
fail_under = 95
show_missing = true
skip_covered = true
exclude_also = [
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
]
